<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Parking Log</string>
    <string name="app_title">Parking Log</string>
    <string name="shared_preference_saved_file_path">file_path</string>
    <string name="shared_preference_saved_file_exists">file_exists</string>
    <string name="action_settings_1">Take photo as floor plan</string>
    <string name="action_settings_2">Use default floor plan</string>
    <string name="tf_label1">Floor</string>
    <string name="tf_label2">Space Num</string>
    <string name="tf_label3">Area</string>
    <string name="tf_label4">DIR from EL</string>
    <string name="tf_floor_text_hint">ex: 1</string>
    <string name="tf_space_text_hint">ex: 123</string>
    <string name="tf_area_text_hint">ex: A</string>
    <string name="tf_direction_text_hint">ex: North</string>
    <string name="tf_record_text_hint">．．．．Please input parking info．．．．</string>
    <string name="tf_record_btn_label">Record</string>
    <string name="tf_clear_btn_label">Clear Records</string>
    <string name="dialog_3x3_toggleButton1_text">SW</string>
    <string name="dialog_3x3_toggleButton2_text">S</string>
    <string name="dialog_3x3_toggleButton3_text">SE</string>
    <string name="dialog_3x3_toggleButton4_text">W</string>
    <string name="dialog_3x3_toggleButton6_text">E</string>
    <string name="dialog_3x3_toggleButton7_text">NW</string>
    <string name="dialog_3x3_toggleButton8_text">N</string>
    <string name="dialog_3x3_toggleButton9_text">NE</string>
    <string name="mf_photo_btn_description">Take photo</string>
    <string name="mf_clear_btn_description">Clear</string>
    <string name="mf_level_btn_description">Parked Floor</string>
    <string name="mf_save_btn_description">Record</string>
    <string name="tf_clear_btn_description">Clear</string>
    <string name="tf_save_btn_description">Record</string>
    <string name="lv_clear_btn_description">Clear this record</string>
    <string name="dialog_np_title">Parked Floor</string>
    <string name="dialog_area_title">Parked Area</string>
    <string name="dialog_direction_title">Direction after Elevator</string>
    <string name="dialog_np_button_label">Confirm</string>
    <string name="dialog_area_button_label">Confirm</string>
    <string name="tf_record_null_hint">Please input info</string>
    <string name="mf_record_null_hint">Please touch the parked location</string>
    <string name="mf_text_hint_1">Please touch the parked location, or swipe left</string>
    <string name="mf_text_hint_2">Click the upper right icon to save</string>
    <string name="mf_time_text_1">%1$s parked at location below</string>
    <string name="mf_time_text_2">%1$s parked at location below on %2$s floor"</string>
    <string-array name="record_text_direction_from_lift_string_array">
        <item>SW</item>
        <item>S</item>
        <item>SE</item>
        <item>W</item>
        <item>E</item>
        <item>NW</item>
        <item>N</item>
        <item>NE</item>
    </string-array>
    <string name="record_text_description_1">Parked at</string>
    <string name="record_text_description_2">\u0020%1$s floor</string>
    <string name="record_text_description_3">\u0020area %1$s</string>
    <string name="record_text_description_4">\u0020space %1$s</string>
    <string name="record_text_description_5">\u0020go %1$s</string>
    <string name="comma">,</string>
    <string name="period">.</string>
</resources>
