<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/colorBackground"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mf_top_layout">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/mf_clear_icon"
            android:id="@+id/mf_clear_btn"
            android:background="@null"
            android:contentDescription= "@string/mf_clear_btn_description"/>

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/num_q_icon"
            android:id="@+id/mf_level_btn"
            android:background="@null"
            android:contentDescription= "@string/mf_level_btn_description"/>

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/mf_save_icon"
            android:id="@+id/mf_save_btn"
            android:background="@null"
            android:contentDescription="@string/mf_save_btn_description"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:hint="@string/mf_time_text_hint"
            android:id="@+id/mf_time_text" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/mf_relative_layout"
        android:layout_height="match_parent"
        android:padding="20px">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/mf_bg_image"
            android:scaleType="centerCrop" />

    </RelativeLayout>
    </LinearLayout>
</LinearLayout>